--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "wrangler dev src/index.ts",
+    "dev": "wrangler dev src/index.ts --port 3001",
     "deploy": "wrangler deploy --minify src/index.ts",
     "list": "wrangler d1 migrations list formhook-db",
     "apply": "wrangler d1 migrations apply formhook-db",
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.2.2",
-    "@prisma/adapter-d1": "^5.15.0",
-    "@prisma/client": "^5.15.0",
+    "@prisma/adapter-d1": "^5.22.0",
+    "@prisma/client": "^5.22.0",
     "@react-email/components": "^0.0.32",
     "@react-email/render": "^1.0.4",
     "bcrypt-edge": "^0.0.6",
@@ -29,7 +29,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "prisma": "^5.22.0",
     "@cloudflare/workers-types": "^4.20240529.0",
+    "@formhook/types": "workspace:*",
+    "@formhook/validations": "workspace:*",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^9.6.1",
     "@types/react": "^19.0.8",
