--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "shiki": "^2.2.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
