--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,14 @@
     "simple-import-sort/exports": "error",
     "import/first": "error",
     "import/newline-after-import": "error",
-    "import/no-duplicates": "error"
+    "import/no-duplicates": "error",
+    "no-undef": "error",
+    "no-undef-init": "error",
+    "no-unused-imports": "error",
+    "no-unused-vars": "error",
+    "no-unused-expressions": "error",
+    "no-unused-labels": "error",
+    "no-unused-catch": "error",
+    "no-unused-await": "error"
   }
 }
