--- a/api/package.json
+++ b/api/package.json
@@ -6,10 +6,11 @@
     "dev": "wrangler dev src/index.ts --port 3001",
     "deploy": "wrangler deploy --minify src/index.ts",
     "list": "wrangler d1 migrations list formhook-db",
-    "apply": "wrangler d1 migrations apply formhook-db",
+    "apply": "wrangler d1 migrations apply formhook-db && pnpm run generate",
     "generate": "prisma generate",
-    "create": "npx wrangler d1 migrations create formhook-db update_migration",
-    "update": "npx prisma migrate diff --from-local-d1 --to-schema-datamodel ./prisma/schema.prisma --script --output migrations/0003_updated_schemas.sql",
+    "create": "npx wrangler d1 migrations create formhook-db add_attempts",
+    "initial": "npx prisma migrate diff --from-empty --to-schema-datamodel ./prisma/schema.prisma --script --output migrations/0001_create_user_table.sql",
+    "update": "npx prisma migrate diff --from-local-d1 --to-schema-datamodel ./prisma/schema.prisma --script --output migrations/0003_add_attempts.sql",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
     "cf-types": "wrangler types",
@@ -33,7 +34,7 @@
     "prisma": "^5.22.0",
     "@cloudflare/workers-types": "^4.20240529.0",
     "@formhook/types": "workspace:*",
-    "@formhook/validations": "workspace:*",
+    "@formhook/utils": "workspace:*",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^9.6.1",
     "@types/react": "^19.0.8",
