--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "pages:build": "pnpm next-on-pages",
-    "preview": "pnpm pages:build && wrangler pages dev",
-    "deploy": "pnpm pages:build && wrangler pages deploy",
+    "preview": "pnpm pages:build && wrangler pages dev --env .env.local",
+    "deploy": "pnpm pages:build && wrangler pages deploy --env .env.production",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
@@ -29,12 +29,14 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.5",
@@ -55,7 +57,7 @@
     "@cloudflare/workers-types": "^4.20250124.3",
     "@eslint/eslintrc": "^3",
     "@formhook/types": "workspace:*",
-    "@formhook/validations": "workspace:*",
+    "@formhook/utils": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
