--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "format": "turbo run format",
-    "test": "echo \"No tests specified\" && exit 0",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
     "clean": "turbo run clean",
     "prepare": "husky"
   },
@@ -34,8 +35,11 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
     "prettier": "^3.4.2",
+    "tsup": "^8.0.2",
     "turbo": "^1.12.4",
-    "typescript": "^5.7.3",
-    "tsup": "^8.0.2"
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "jest": "^29.7.0"
   }
 }
