--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,10 @@
       "cache": false
     },
     "test": {
+      "outputs": ["coverage/**"],
+      "dependsOn": ["^build"]
+    },
+    "test:watch": {
       "cache": false,
       "persistent": true
     },
