--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "input-otp": "^1.4.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
