--- a/api/.dev.vars.example
+++ b/api/.dev.vars.example
@@ -1,3 +1,4 @@
 FRONTEND_URL="http://localhost:3000"
 RESEND_API_KEY="re_XXX"
+RESEND_EMAIL_ADDRESS="no-reply@emails.formscale.dev"
 JWT_SECRET = "my-secret"
