--- a/api/package.json
+++ b/api/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "wrangler dev src/index.ts --port 3001",
+    "dev:remote": "wrangler dev src/index.ts --remote --port 3001",
     "deploy": "wrangler deploy --minify src/index.ts",
+    "migrate": "node scripts/migrate.js",
+    "migrate:remote": "node scripts/migrate.js --remote",
+    "migrate:apply": "node scripts/migrate.js --apply",
+    "migrate:initial": "node scripts/migrate.js --initial",
+    "generate": "prisma generate",
     "list": "wrangler d1 migrations list formhook-db",
     "apply": "wrangler d1 migrations apply formhook-db && pnpm run generate",
-    "generate": "prisma generate",
-    "create": "npx wrangler d1 migrations create formhook-db add_attempts",
-    "initial": "npx prisma migrate diff --from-empty --to-schema-datamodel ./prisma/schema.prisma --script --output migrations/0001_create_user_table.sql",
-    "update": "npx prisma migrate diff --from-local-d1 --to-schema-datamodel ./prisma/schema.prisma --script --output migrations/0003_add_attempts.sql",
+    "apply:remote": "wrangler d1 migrations apply formhook-db --remote && pnpm run generate",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
     "cf-types": "wrangler types",
