--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -19,13 +19,15 @@
   },
   "dependencies": {
     "@formhook/types": "workspace:*",
+    "date-fns": "^4.1.0",
+    "react-hook-form": "^7.54.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3",
-    "tsup": "^8.0.2"
+    "tsup": "^8.0.2",
+    "typescript": "^5.3.3"
   }
 }
