--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "@react-email/components": "^0.0.32",
     "@react-email/render": "^1.0.4",
     "bcrypt-edge": "^0.0.6",
+    "date-fns": "^4.1.0",
     "hono": "^4.4.2",
     "nanoid": "^5.0.9",
     "react": "^19.0.0",
@@ -34,7 +35,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "prisma": "^5.22.0",
     "@cloudflare/workers-types": "^4.20240529.0",
     "@formhook/types": "workspace:*",
     "@formhook/utils": "workspace:*",
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.2.5",
+    "prisma": "^5.22.0",
     "wrangler": "^3.57.2"
   }
 }
