--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "email": "email dev --dir src/lib/emails --port 3030"
   },
   "dependencies": {
+    "@hono-rate-limiter/cloudflare": "^0.2.2",
     "@hono/zod-validator": "^0.2.2",
     "@prisma/adapter-d1": "^5.22.0",
     "@prisma/client": "^5.22.0",
