--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,11 +35,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "cobe": "^0.6.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.10",
     "input-otp": "^1.4.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.4.10",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
