--- a/package.json
+++ b/package.json
@@ -17,14 +17,21 @@
     "test": "turbo run test",
     "test:watch": "turbo run test:watch",
     "clean": "turbo run clean",
-    "prepare": "husky"
+    "prepare": "husky",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "changeset publish",
+    "version:canary": "changeset version --snapshot canary",
+    "release:canary": "changeset publish --tag canary"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.28.1",
     "@types/eslint": "^9.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
+    "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.7.0",
@@ -34,7 +41,9 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
+    "multi-semantic-release": "^3.0.2",
     "prettier": "^3.4.2",
+    "semantic-release": "^24.2.3",
     "tsup": "^8.0.2",
     "turbo": "^1.12.4",
     "typescript": "^5.7.3"
