--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@formhook/types",
+  "name": "@formscale/types",
   "version": "0.0.1",
   "private": true,
   "main": "./dist/index.js",
