--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,15 @@
     "frontend": true,
     "packages": true
   },
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "always"
+  },
   "autoOpenWorkspace.enableAutoOpenIfSingleWorkspace": true,
   "autoOpenWorkspace.enableAutoOpenAlwaysFirst": true
 }
