--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -2,9 +2,9 @@ name: Build and Deploy
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
   workflow_dispatch:
 
 jobs:
@@ -50,7 +50,7 @@ jobs:
   build-and-deploy:
     needs: lint-and-test
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == "refs/heads/master"
     steps:
       - uses: actions/checkout@v3
 
@@ -97,18 +97,8 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
-          FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
-          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
-          RESEND_EMAIL_ADDRESS: ${{ secrets.RESEND_EMAIL_ADDRESS }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          BUCKET_URL: ${{ secrets.BUCKET_URL }}
-
       - name: Deploy Frontend to Cloudflare Pages
         run: pnpm --filter "frontend" deploy
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-          NEXT_PUBLIC_FRONTEND_URL: ${{ secrets.NEXT_PUBLIC_FRONTEND_URL }}
-          NEXT_PUBLIC_BUCKET_URL: ${{ secrets.NEXT_PUBLIC_BUCKET_URL }}
