--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -50,7 +50,7 @@ jobs:
   build-and-deploy:
     needs: lint-and-test
     runs-on: ubuntu-latest
-    if: github.ref == "refs/heads/master"
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v3
 
