--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
     "@eslint/js": "^9.21.0",
     "@formscale/types": "workspace:*",
     "@formscale/utils": "workspace:*",
+    "@formscale/ui": "workspace:*",
     "@types/eslint__eslintrc": "^3.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
