--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,8 +14,9 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
-    "@formscale/ui": "workspace:*",
     "@formscale/types": "workspace:*",
+    "@formscale/ui": "workspace:*",
+    "@formscale/utils": "workspace:*",
     "esbuild": "^0.25.0",
     "tsup": "^8.3.6",
     "typescript": "^5.3.3",
@@ -25,8 +26,10 @@
     "zod": "^3.22.4"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.54.2"
   }
 }
