--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,9 +16,14 @@
     "./components/form/*": "./src/components/ui/*.{ts,tsx}"
   },
   "keywords": [],
+  "scripts": {
+    "clean": "rm -rf node_modules"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@formscale/types": "workspace:*",
+    "@formscale/utils": "workspace:*",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.5",
@@ -48,8 +53,6 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.7",
     "class-variance-authority": "^0.7.1",
-    "@formscale/utils": "workspace:*",
-    "@formscale/types": "workspace:*",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
@@ -57,8 +60,10 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "next-themes": "^0.4.4",
+    "postcss": "^8",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
