--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
+    "clean": "rm -rf node_modules && rm -rf .next && rm -rf .turbo",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
     "pages:build": "pnpm next-on-pages",
