--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "wrangler dev src/index.ts --port 3001",
-    "dev:remote": "wrangler dev src/index.ts --remote --port 3001",
+    "dev": "wrangler dev src/index.ts --remote --port 3001",
+    "dev:local": "wrangler dev src/index.ts --port 3001",
     "deploy": "pnpm run apply:remote && wrangler deploy --minify src/index.ts",
+    "clean": "rm -rf .wrangler && rm -rf node_modules",
     "migrate": "node scripts/migrate.js",
     "migrate:remote": "node scripts/migrate.js --remote",
     "migrate:apply": "node scripts/migrate.js --apply",
